Fix Shuttle Entity unlocalized name in en_US.lang

--- a/src/main/resources/assets/amunra/lang/en_US.lang
+++ b/src/main/resources/assets/amunra/lang/en_US.lang
@@ -179,7 +179,7 @@ entity.sentryRobot.name=Sentry
 entity.osirisBoss.name=Undead Pharaoh
 entity.alienVillagerAR.name=Gastropod Villager
 entity.alienBug.name=Pincer Bug
-entity.Shuttle.name=Shuttle Rocket
+entity.GalacticraftAmunRa.Shuttle.name=Shuttle Rocket
 item.itemShuttle.name=Shuttle Rocket
 item.thermalSuit.thermalLevel.name=Thermal Level: %s
 item.thermalSuit.helmet.name=Thermoregulation Helmet
